--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   },
   "dependencies": {
     "consola": "^3.2.3",
+    "dotenv": "^16.4.5",
     "form-data": "^4.0.0",
     "node-fetch": "^2.7.0",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "qs": "^6.13.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.2.0",
     "@types/node-fetch": "^2.6.11",
     "@types/node-telegram-bot-api": "^0.64.7",
+    "@types/qs": "^6.9.15",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.0",
