--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     restart: always
     environment:
       - NODE_ENV=production
+    volumes:
+      - .:/app
     ports:
       - "3000:3000" 
     command: npm run start
