--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - NODE_ENV=production
     volumes:
-      - .:/app
+      - .:/apps
     ports:
       - "3000:3000" 
     command: npm run start
